fixed z-index issue

--- a/static/style.css
+++ b/static/style.css
@@ -356,6 +356,7 @@ body {
 }
 
 .log-section {
+  z-index: -1;
   left: 0;
   width: 40%;
   margin: 10px 0;
